--- a/app/components/MainField/style.scss
+++ b/app/components/MainField/style.scss
@@ -10,6 +10,7 @@
 .bottom-counter{
   color:#454545;
   font-size: 12px;
-  display: flex;
-  justify-content: flex-end;
+  position: fixed;
+  bottom: 8px;
+  right: 16px;
 }
