--- a/app/containers/ContentForm/style.scss
+++ b/app/containers/ContentForm/style.scss
@@ -2,7 +2,7 @@
   width: 100%;
   //height: 100%;
   overflow: auto;
-  height: calc(100% - 115px);
+  height: calc(100% - 36px);
 }
 
 .clickable-item {
