--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -59,7 +59,6 @@ body {
   height: 100%;
 }
 .mainContent{
-  flex:10;
   background-color:#f5f5f5;
 	width: 100%;
 	overflow: hidden;
